--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,8 +34,7 @@ jobs:
         run: npm run build
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v4  # Updated to v4
-
+        uses: actions/upload-artifact@v4
         with:
           name: dist
           path: ./dist
@@ -48,7 +47,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@v4  # Updated to v4
+        uses: actions/download-artifact@v4
         with:
           name: dist
           path: ./dist
@@ -56,7 +55,7 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
         with:
-          github_token: ${{ secrets.TOKEN }}
-          publish_dir: ./dist
+          token: ${{ secrets.TOKEN }}
+          # No need to specify artifact_name if deploying from a directory
+          # Instead, ensure the directory is correct
